Potential memory leaks in jpegLoader.c in error case

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • jfx15
    • Affects Version/s: 8, 9, 10, jfx11
    • Component/s: javafx

        The native code in jpegloader.c allocates a range of memory areas with malloc, but does not free those in error cases.

        For example
        1. In jpegloader.c :: initDecompressor(), cinfo->src, cinfo, jerr_mgr are not freed in error case.
        2. In jpegloader.c :: decompressIndirect(), scanline_ptr, is not freed in error case.

              Assignee:
              Ambarish Rapte
              Reporter:
              Ambarish Rapte
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: