8212034: Memory leaks in jpegLoader.c in error case